crates/ars-components/src/overlay/tour/snapshots/ars_components__overlay__tour__tests__tour_step_content.snap
---
source: crates/ars-components/src/overlay/tour/mod.rs
expression: snapshot_attrs(&api.step_content_attrs())
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "step-content",
            ),
        ),
        (
            Data(
                "ars-placement",
            ),
            String(
                "bottom",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "tour",
            ),
        ),
        (
            Data(
                "ars-state",
            ),
            String(
                "active",
            ),
        ),
        (
            Data(
                "ars-step",
            ),
            String(
                "0",
            ),
        ),
        (
            Aria(
                LabelledBy,
            ),
            String(
                "tour-step-title",
            ),
        ),
        (
            Aria(
                Modal,
            ),
            String(
                "false",
            ),
        ),
        (
            Aria(
                DescribedBy,
            ),
            String(
                "tour-step-description",
            ),
        ),
        (
            Id,
            String(
                "tour-step-content",
            ),
        ),
        (
            Role,
            String(
                "dialog",
            ),
        ),
    ],
    styles: [],
}
