crates/ars-components/src/overlay/tour/snapshots/ars_components__overlay__tour__tests__tour_step_description.snap
---
source: crates/ars-components/src/overlay/tour/mod.rs
expression: snapshot_attrs(&api.step_description_attrs())
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "step-description",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "tour",
            ),
        ),
        (
            Id,
            String(
                "tour-step-description",
            ),
        ),
    ],
    styles: [],
}
