crates/ars-components/src/overlay/tour/snapshots/ars_components__overlay__tour__tests__tour_step_indicator_inactive.snap
---
source: crates/ars-components/src/overlay/tour/mod.rs
expression: snapshot_attrs(&api.step_indicator_attrs(1))
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "step-indicator",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "tour",
            ),
        ),
        (
            Data(
                "ars-step",
            ),
            String(
                "1",
            ),
        ),
    ],
    styles: [],
}
